--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
+    listen [::]:80 ipv6only=on;
     listen 80;
-    listen [::]:80;
 
     server_name irix.dev www.irix.dev irix.software www.irix.software;
     server_tokens off;
@@ -15,8 +15,8 @@ server {
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen [::]:443 ssl http2 ipv6only=on; 
+    listen 443 ssl http2; 
 
     server_name irix.dev www.irix.dev irix.software www.irix.software;
     server_tokens off;
@@ -24,7 +24,8 @@ server {
     ssl_certificate /etc/letsencrypt/live/irix.dev/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/irix.dev/privkey.pem;
     
-    include /etc/letsencrypt/options-ssl-nginx.conf;
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     include "conf.d/include_*";
