--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,14 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "bf:d8:27:dd:c8:41:89:5f:c3:9b:c4:c3:0f:e0:01:4e"
+            - "88:15:7f:4a:1b:1e:12:9c:ab:e7:af:12:bc:d8:25:01"
       - checkout
       - run:
-          command: scp -o StrictHostKeyChecking=no ./scripts/deploy.sh ./scripts/env.sh docker-compose.yml index.html ${DO_USER}@irix.dev:~
+          command: scp -o StrictHostKeyChecking=no ./scripts/deploy.sh ./scripts/env.sh docker-compose.yml index.html ${DO_USER}@${DO_HOST}:~
       - run:
-          command: scp -r -o StrictHostKeyChecking=no ./nginx ./assets ${DO_USER}@irix.dev:~
+          command: scp -r -o StrictHostKeyChecking=no ./nginx ./assets ${DO_USER}@${DO_HOST}:~
       - run:
-          command: ssh -o StrictHostKeyChecking=no ${DO_USER}@irix.dev "/bin/bash ./deploy.sh"
+          command: ssh -o StrictHostKeyChecking=no ${DO_USER}@${DO_HOST} "/bin/bash ./deploy.sh"
 workflows:
   version: 2
   test:
